--- a/carriotsCors_GB.html
+++ b/carriotsCors_GB.html
@@ -19,11 +19,11 @@
 					<canvas id="myChart2" width="400" height="300"></canvas>
 			</div>
 			<hr>
-			<button class="btn btn-primary" onclick="Descargar()"> Descargar </button>
+			<button type="submit" class="btn btn-primary" onclick="window.open('Temperaturas.xlsx')"> Descargar </button>
 			<br>
-			Browser<p id="browser"></p>
+			<p id="browser" hidden ></p>
 			<br>
-			Mobil<p id="mobil"></p>
+			<p id="mobil" hidden ></p>
 		</div>
 	  
 		<script type="text/javascript" src="./script/Chart.min.js"> </script>
